code path for maven changed